@startuml

PrimitiveType -up-|> DynamicType
AggregationType -up-|> DynamicType
CollectionType -up-|> DynamicType
AliasType -up-|> DynamicType
PairType -up-|> DynamicType

StructType -up-|> AggregationType
UnionType -up-|> AggregationType

ArrayType -up-|> CollectionType
MutableCollectionType -up-|> CollectionType

StringType -up-|> MutableCollectionType
WStringType -up-|> MutableCollectionType
SequenceType -up-|> MutableCollectionType
MapType -up-|> MutableCollectionType

EnumeratedType -up-|> PrimitiveType
EnumerationType -up-|> EnumeratedType

abstract DynamicType
abstract AggregationType
abstract CollectionType
abstract MutableCollectionType
class PrimitiveType<T>
abstract EnumeratedType<T>
class EnumerationType<T>
@enduml
